--- a/環境構築メモ.md
+++ b/環境構築メモ.md
@@ -1,5 +1,11 @@
 # 環境構築の手順
+
 docker-compose build
-docker-compose up -d(doneってでても全部起動されてないよ)
+docker-compose up -d(done ってでても全部起動されてないよ)
 docker-compose run web rails db:create
 docker-compose run web rails db:migrate
+docker-compose run web rails db:seed
+
+## Vuetify
+
+yarn add vuetify
