--- a/環境構築メモ.md
+++ b/環境構築メモ.md
@@ -6,6 +6,6 @@ docker-compose run web rails db:create
 docker-compose run web rails db:migrate
 docker-compose run web rails db:seed
 
-## Vuetify
+## Vuetifyyyyy
 
 yarn add vuetify
